--- a/styles.css
+++ b/styles.css
@@ -99,9 +99,7 @@ nav {
 .about-me__info--container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    max-width: 600px;
-    margin-bottom: auto;
+    margin-botome: auto;
 }
 
 .about-me__picture--mask {
